# QML_Sudoku_Solver

./: CMakeLists.txt  LICENSE  Main.qml  README.md  main.cpp  solver.cpp  solver.h
